<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modules.main.activity.MainActivity">
    <include
        android:id="@+id/layout_title"
        layout="@layout/layout_middle_title"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_user_name"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/input_nick_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_title"/>


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_room_name"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/input_room_name"
        android:inputType="number"
        android:maxLength="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_user_name" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_start"
        android:layout_width="120dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorAccent"
        android:text="@string/begin_use"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_role" />

    <CheckBox
        android:id="@+id/cb_role"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        app:layout_constraintTop_toBottomOf="@+id/et_room_name"
        app:layout_constraintStart_toStartOf="parent"
        android:text="房主"
        />

</androidx.constraintlayout.widget.ConstraintLayout>